# snakerobots

./: .dockerignore  .env  .gitignore  Cargo.toml  server-arm.Dockerfile  server.Dockerfile  worker-arm.Dockerfile  worker.Dockerfile
crates/godot/: Cargo.toml  build.rs
crates/godot/src/: error.rs  game.rs  lib.rs  util.rs
crates/godot/src/client/: classes.rs  error.rs  middleware.rs  mod.rs
crates/godot/src/game/: error.rs  lint.rs  local.rs  mod.rs  timeline.rs
crates/rowplus/: Cargo.toml
crates/rowplus-derive/: Cargo.toml
crates/rowplus-derive/src/: lib.rs
crates/rowplus-derive/tests/: integration_test.rs
crates/rowplus/src/: lib.rs
crates/server/: Cargo.toml  docker-compose.local.yml
crates/server/migrations/: 0001_initial.sql  0002_indexes.sql
crates/server/src/: main.rs  state.rs
crates/server/src/http/: auth.rs  error.rs  extract.rs  leaderboard.rs  match_requests.rs  matches.rs  mod.rs  robots.rs  users.rs
crates/server/src/matchmaking/: mod.rs  queue.rs
crates/server/src/middleware/: dev_token.rs  mod.rs
crates/server/src/model/: matches.rs  mod.rs  robot.rs  user.rs
crates/server/src/service/: auth.rs  error.rs  game.rs  match_queue.rs  matches.rs  mod.rs  robot.rs  user.rs
crates/shared/: Cargo.toml
crates/shared-backend/: Cargo.toml
crates/shared-backend/src/queue/: error.rs  mod.rs
crates/shared/examples/: terminal.rs
crates/shared/src/: lib.rs  math.rs
crates/shared/src/dto/: auth.rs  error.rs  game.rs  match_request.rs  mod.rs  replay.rs  robot.rs  user.rs  util.rs
crates/shared/src/logic/: mod.rs  standard.rs
crates/shared/src/logic/robot/: error.rs  impls.rs  lang.rs  mod.rs  replay.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  main.rs  runner.rs  worker.rs
deployment/dev/: .env.example  docker-compose.yml
deployment/prod/: .env.example  docker-compose.yml
deployment/prod-worker/: .gitignore  docker-compose.yml
deployment/prod/nginx/: nginx.conf
snakerobots-dto/: Cargo.toml
snakerobots-dto/src/: game.rs  lib.rs  user.rs  util.rs
snakerobots-godot/: Cargo.toml
snakerobots-godot/src/: async_runtime.rs  client.rs  error.rs  game.rs  lib.rs
snakerobots-godot/src/client/: classes.rs  error.rs  mod.rs
snakerobots-logic/: Cargo.toml
snakerobots-logic/examples/: double_pathfind.rs  terminal.rs  three_players.rs
snakerobots-logic/src/: lib.rs  math.rs  robot.rs
snakerobots-logic/src/robot/: impls.rs  mod.rs
snakerobots-server/: .env  .env.example  Cargo.toml  docker-compose.dev.yml
snakerobots-server/migrations/: 0001_initial.sql
snakerobots-server/src/: main.rs  runner.rs  state.rs
snakerobots-server/src/http/: auth.rs  error.rs  extract.rs  match_requests.rs  mod.rs  users.rs
snakerobots-server/src/middleware/: mod.rs
snakerobots-server/src/model/: matches.rs  mod.rs  session.rs  user.rs
snakerobots-server/src/routes/: mod.rs
snakerobots-server/src/service/: auth.rs  crypto.rs  game.rs  matches.rs  mod.rs  user.rs
snakerobots-shared/: Cargo.toml
snakerobots-shared-backend/: Cargo.toml
snakerobots-shared-backend/src/: error.rs  lib.rs  processing.rs
snakerobots-shared/examples/: terminal.rs
snakerobots-shared/src/: lib.rs  math.rs
snakerobots-shared/src/dto/: auth.rs  game.rs  match_request.rs  mod.rs  user.rs  util.rs
snakerobots-shared/src/logic/: mod.rs
snakerobots-shared/src/logic/robot/: impls.rs  mod.rs
snakerobots-worker/: Cargo.toml
snakerobots-worker/src/: main.rs  runner.rs  state.rs
website/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json
website/docs/: getting-started.md  index.md
website/docs/.vitepress/: config.mts
website/docs/.vitepress/theme/: style.css
website/docs/game/: specification.md
website/docs/language/: specification.md
