[package]
name = "snakerobots-server"
version = "0.1.0"
edition = "2024"

[dependencies]
snakerobots-logic = { path = "../snakerobots-logic" }
snakerobots-dto = { path = "../snakerobots-dto" }
tokio = { version = "1.49", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

rand = "0.10"
eyre = "0.6"
