[package]
name = "snakerobots-server"
version = "0.1.0"
edition = "2024"

[dependencies]
snakerobots-shared = { path = "../snakerobots-shared" }
tokio = { version = "1.49", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

rand = "0.10"
eyre = "0.6"
