[package]
name = "snakerobots-server"
version = "0.1.0"
edition = "2024"

[dependencies]
snakerobots-shared = { path = "../snakerobots-shared" }

tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }

serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.10"

eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
