[package]
name = "snakerobots-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
snakerobots-shared = { path = "../snakerobots-shared" }
snakerobots-shared-backend = { path = "../snakerobots-shared-backend" }

tokio = { version = "1.49", features = ["full"] }

redis = { version = "1.0", features = ["tokio-comp"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
dotenvy = "0.15"
