[package]
name = "snakerobots-server"
version = "0.1.0"
edition = "2024"

[dependencies]
snakerobots-shared = { path = "../shared" }

tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
tokio-util = "0.7"

axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "validate-request"] }
tower = "0.5"

sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
rowplus = { path = "../rowplus" }
rowplus-derive = { path = "../rowplus-derive" }

serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.22", features = ["serde"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.10"

eyre = "0.6"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
dotenvy = "0.15"
