[package]
name = "snakerobots-shared"
version = "0.1.0"
edition = "2024"

[features]
lang = ["dep:tropaion"]
default = []

[dependencies]
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

tropaion = { git = "ssh://git@github.com/MiranCZ/Tropaion.git", rev = "b605eec3278e4fa4ae59facc24fb926a87a426ac", optional = true }

[[example]]
name = "terminal"
required-features = ["lang"]
