[package]
name = "snakerobots-shared"
version = "0.1.0"
edition = "2024"

[features]
lang = ["dep:tropaion"]
default = []

[dependencies]
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }

tropaion = { git = "https://github.com/MiranCZ/Tropaion.git", rev = "a4068fa7ed29c2b2befb8b12dccceb73871494a7", optional = true }

[[example]]
name = "terminal"
required-features = ["lang"]
